# odoo-addons-parser

./: .gitignore  README.md  example_treesitter.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
odoo_addons_analyzer/: __init__.py  code.py  module.py  repository.py
odoo_addons_analyzer/tests/: common.py  test_module.py  test_repository.py
odoo_addons_analyzer/tests/repo/module_test/: __manifest__.py
odoo_addons_analyzer/tests/repo/module_test/models/: res_partner.py
odoo_addons_parser/: __init__.py  code.py  code_ast_output.txt  data_csv.py  data_xml.py  module.py  odoo.py  pyast.py  repository.py  treesitter_utils.py
odoo_addons_parser/tests/: common.py  test_module.py  test_odoo.py  test_repository.py  test_treesitter_utils.py
odoo_addons_parser/tests/repo/module_test/: __manifest__.py
odoo_addons_parser/tests/repo/module_test/data/: res_partner.xml
odoo_addons_parser/tests/repo/module_test/demo/: res_partner.xml
odoo_addons_parser/tests/repo/module_test/models/: res_partner.py  res_users.py
odoo_addons_parser/tests/repo/module_test/reports/: reports.xml  templates.xml
odoo_addons_parser/tests/repo/module_test/security/: ir.model.access.csv
odoo_addons_parser/tests/repo/module_test/tests/: test.xml
odoo_addons_parser/tests/repo/module_test/views/: assets.xml  res_partner.xml
